// EVOMARKET DATABASE SCHEMA - SIMPLIFIED VERSION
// 29 Tables (Removed TryonModels)
// Optimized for clarity and simplicity

// ============================================
// 👤 USER MANAGEMENT (5 tables)
// ============================================

Table Users {
  id integer [pk, increment]
  fullname varchar(100)
  email varchar(150) [unique, not null]
  phone_number varchar(20) [unique]
  password varchar(255) [not null]
  role enum('buyer', 'seller', 'admin') [default: 'buyer']
  account_status enum('ACTIVE', 'LOCKED') [default: 'ACTIVE']
  avatar varchar(500)
  birthday date
  gender varchar(20)
  shop_name varchar(120) [note: 'Tên shop cho seller']
  notification_preferences json
  deleted boolean [default: false, note: 'Soft delete']
  deleted_at timestamp [note: 'Thời gian xóa']
  created_at timestamp [default: `now()`]
}

Table RefreshTokens {
  id integer [pk, increment]
  user_id integer [ref: > Users.id, not null]
  token varchar [not null]
  expires_at timestamp [not null]
  is_revoked boolean [default: false]
  device_info varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table UserAddresses {
  id integer [pk, increment]
  user_id integer [ref: > Users.id, not null]
  label varchar(100) [note: 'Nhà riêng, Công ty, etc']
  recipient_fullname varchar(100)
  recipient_phone varchar(20)
  address varchar(200)
  city varchar(50)
  state varchar(50)
  country varchar(50) [default: 'Vietnam']
  zipcode varchar(20)
  is_default boolean [default: false]
  deleted boolean [default: false, note: 'Soft delete']
  deleted_at timestamp
  created_at timestamp [default: `now()`]
}

Table UserPayments {
  id integer [pk, increment]
  user_id integer [ref: > Users.id, not null]
  payment_method_type enum('COD', 'Credit Card', 'E-Wallet')
  provider varchar(50) [note: 'VNPay, MoMo, ZaloPay']
  payment_token varchar(255) [note: 'Token từ payment gateway']
  last_four varchar(4) [note: '4 số cuối thẻ']
  card_brand varchar(50) [note: 'Visa, Mastercard, etc']
  created_at timestamp [default: `now()`]
}

Table user_notifications {
  id integer [pk, increment]
  user_id integer [ref: > Users.id, not null]
  type varchar(64) [note: 'order_update, promotion, message, etc']
  title varchar(255)
  message text
  metadata json
  read_at timestamp
  created_at timestamp [default: `now()`]
  
  indexes {
    (user_id, read_at)
  }
}

// ============================================
// 🛍️ PRODUCT MANAGEMENT (4 tables)
// ============================================

Table Categories {
  id integer [pk, increment]
  name varchar(100) [unique, not null]
  description text
  icon varchar(255)
  display_order integer [default: 0]
  deleted boolean [default: false, note: 'Soft delete']
  deleted_at timestamp
  created_at timestamp [default: `now()`]
}

Table Products {
  id integer [pk, increment]
  category_id integer [ref: > Categories.id]
  seller_id integer [ref: > Users.id, not null]
  title varchar(250) [not null]
  price integer [not null, note: 'Giá bán (VND)']
  import_price integer [default: 0, note: 'Giá vốn']
  thumbnail varchar(500)
  images text [note: 'JSON array của URLs']
  description text
  
  // Stock management
  total_stock integer [default: 0]
  sold integer [default: 0]
  available integer [default: 0]
  
  // Status
  deleted boolean [default: false]
  deleted_at timestamp [note: 'Thời gian xóa']
  status enum('active', 'inactive', 'out_of_stock') [default: 'active']
  
  created_at timestamp [default: `now()`]
  updated_at timestamp
  
  indexes {
    seller_id
    category_id
    status
    (title, description) [type: 'FULLTEXT', note: 'Full-text search']
  }
}

Table ProductVariants {
  id integer [pk, increment]
  product_id integer [ref: > Products.id, not null]
  size varchar(50) [note: 'S, M, L, XL, etc']
  color varchar(50) [note: 'Đỏ, Xanh, Vàng, etc']
  sku varchar(100) [unique, note: 'Stock Keeping Unit']
  price_adjustment integer [default: 0, note: 'Điều chỉnh giá so với product']
  stock integer [default: 0]
  deleted boolean [default: false, note: 'Soft delete']
  deleted_at timestamp
  created_at timestamp [default: `now()`]
  
  indexes {
    (product_id, size, color) [unique]
  }
}

Table Discounts {
  id integer [pk, increment]
  product_id integer [ref: > Products.id, not null]
  discount_type enum('Percentage', 'Fixed') [not null]
  discount_value decimal(10,2) [not null]
  start_date timestamp
  end_date timestamp
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  
  indexes {
    (product_id, is_active)
  }
}

// ============================================
// 🛒 SHOPPING (1 table)
// ============================================

Table Cart {
  id integer [pk, increment]
  user_id integer [ref: > Users.id, not null]
  product_id integer [ref: > Products.id, not null]
  variant_id integer [ref: > ProductVariants.id]
  seller_id integer [ref: > Users.id, not null, note: 'Để group by seller']
  quantity integer [default: 1]
  added_at timestamp [default: `now()`]
  
  indexes {
    (user_id, product_id, variant_id) [unique]
    seller_id
  }
}

// ============================================
// 📦 ORDERS (3 tables)
// ============================================

Table Orders {
  id integer [pk, increment]
  user_id integer [ref: > Users.id, not null]
  
  // Shipping info (snapshot)
  fullname varchar(100)
  email varchar(150)
  phone varchar(20)
  address varchar(250)
  
  // Pricing
  subtotal integer [note: 'Tổng tiền hàng']
  shipping_fee integer [default: 0]
  discount_amount integer [default: 0, note: 'Từ coupon']
  total_price integer [note: 'Tổng thanh toán']
  
  // Coupon
  coupon_id integer [ref: > Coupons.id]
  coupon_code varchar(50) [note: 'Snapshot mã coupon']
  
  // Payment & Shipping
  payment_method enum('COD', 'Online')
  shipping_method varchar(20) [default: 'standard', note: 'standard, express']
  
  // Status
  status varchar(40) [default: 'PENDING', note: 'PENDING, CONFIRMED, SHIPPING, DELIVERED, CANCELLED']
  
  // Notes
  buyer_note varchar(500)
  
  // Timestamps
  created_at timestamp [default: `now()`]
  updated_at timestamp
  confirmed_at timestamp
  shipped_at timestamp
  delivered_at timestamp
  cancelled_at timestamp
  
  indexes {
    user_id
    status
    (created_at)
  }
}

Table OrderItems {
  id integer [pk, increment]
  order_id integer [ref: > Orders.id, not null]
  product_id integer [ref: > Products.id]
  variant_id integer [ref: > ProductVariants.id]
  seller_id integer [ref: > Users.id, note: 'Người bán']
  
  // Pricing snapshot
  product_title varchar(250)
  product_thumbnail varchar(500)
  variant_name varchar(100) [note: 'Size M - Màu Đỏ']
  unit_price integer [note: 'Giá 1 sản phẩm']
  import_price integer [note: 'Giá vốn snapshot']
  quantity integer
  total_price integer [note: 'unit_price * quantity']
  
  // Platform fee
  platform_fee_percent decimal(5,2) [default: 0]
  platform_fee_amount integer [default: 0]
  
  indexes {
    order_id
    seller_id
  }
}

Table order_status_histories {
  id integer [pk, increment]
  order_id integer [ref: > Orders.id, not null]
  from_status varchar(40)
  to_status varchar(40) [not null]
  actor_type enum('buyer', 'seller', 'admin', 'system')
  actor_id integer
  note varchar(500)
  created_at timestamp [default: `now()`]
  
  indexes {
    (order_id, created_at)
  }
}

// ============================================
// 💳 PAYMENTS (4 tables)
// ============================================

Table Payments {
  id integer [pk, increment]
  order_id integer [ref: - Orders.id, unique, not null]
  user_id integer [ref: > Users.id, not null]
  
  amount integer [not null]
  method enum('COD', 'Online')
  status enum('Pending', 'Success', 'Failed') [default: 'Pending']
  
  // VNPay integration
  vnpay_transaction_no varchar(32)
  vnpay_transaction_date varchar(20)
  vnpay_response_code varchar(10)
  
  // Refund
  is_refunded boolean [default: false]
  refunded_at timestamp
  refund_amount integer
  
  created_at timestamp [default: `now()`]
  
  indexes {
    order_id
    user_id
    status
  }
}

Table Refunds {
  id integer [pk, increment]
  payment_id integer [ref: > Payments.id, not null]
  order_id integer [ref: > Orders.id, not null]
  user_id integer [ref: > Users.id, not null]
  
  amount integer [not null]
  reason varchar(255)
  status enum('Pending', 'Approved', 'Rejected') [default: 'Pending']
  
  admin_note text
  processed_by integer [ref: > Users.id]
  
  created_at timestamp [default: `now()`]
  processed_at timestamp
  
  indexes {
    payment_id
    status
  }
}

Table Coupons {
  id integer [pk, increment]
  code varchar(50) [unique, not null]
  
  // Discount info
  discount_type enum('Percentage', 'Fixed')
  discount_value decimal(10,2)
  max_discount_amount integer [note: 'Giảm tối đa (nếu %)']
  
  // Conditions
  min_order_value decimal(10,2) [note: 'Đơn tối thiểu']
  max_uses integer [note: 'Số lần dùng tối đa']
  used_count integer [default: 0]
  
  // Time range
  start_date timestamp
  end_date timestamp
  
  // Restrictions
  new_user_only boolean [default: false]
  seller_id integer [ref: > Users.id, note: 'NULL = mã sàn, NOT NULL = mã shop']
  
  is_active boolean [default: true]
  deleted boolean [default: false, note: 'Soft delete']
  deleted_at timestamp
  created_at timestamp [default: `now()`]
  
  indexes {
    code
    (seller_id, is_active)
    (start_date, end_date)
  }
}

Table CouponRedemptions {
  id integer [pk, increment]
  user_id integer [ref: > Users.id, not null]
  coupon_id integer [ref: > Coupons.id, not null]
  order_id integer [ref: > Orders.id, not null]
  discount_amount integer [note: 'Số tiền giảm thực tế']
  created_at timestamp [default: `now()`]
  
  indexes {
    (user_id, coupon_id)
    order_id
  }
}

// ============================================
// 🚚 SHIPPING (3 tables)
// ============================================

Table ShippingProviders {
  id integer [pk, increment]
  name varchar(100) [unique, not null, note: 'Giao Hàng Nhanh, Giao Hàng Tiết Kiệm']
  code varchar(50) [unique, note: 'GHN, GHTK, VNPOST']
  contact varchar(100)
  is_active boolean [default: true]
  deleted boolean [default: false, note: 'Soft delete']
  deleted_at timestamp
  created_at timestamp [default: `now()`]
}

Table Shipments {
  id integer [pk, increment]
  order_id integer [ref: - Orders.id, unique, not null]
  provider_id integer [ref: > ShippingProviders.id]
  
  tracking_number varchar(50) [unique]
  shipping_method enum('Standard', 'Express', 'Same Day')
  shipping_fee integer
  
  status enum('Pending', 'Picked Up', 'In Transit', 'Delivered', 'Failed') [default: 'Pending']
  current_location varchar(255)
  
  estimated_delivery date
  picked_up_at timestamp
  delivered_at timestamp
  
  created_at timestamp [default: `now()`]
  
  indexes {
    order_id
    tracking_number
    status
  }
}

Table FailedShipments {
  id integer [pk, increment]
  shipment_id integer [ref: > Shipments.id, not null]
  reason varchar(255) [not null]
  resolution enum('Rescheduled', 'Returned', 'Cancelled')
  note text
  processed_at timestamp [default: `now()`]
}

// ============================================
// ⭐ REVIEWS (1 table)
// ============================================

Table Reviews {
  id integer [pk, increment]
  user_id integer [ref: > Users.id, not null]
  product_id integer [ref: > Products.id, not null]
  order_id integer [ref: > Orders.id, not null]
  order_item_id integer [ref: - OrderItems.id, unique, not null]
  
  rating integer [not null, note: '1-5 sao']
  comment text
  images json [note: 'Array ảnh review']
  
  // Moderation
  is_reported boolean [default: false]
  report_reason varchar(255)
  report_status enum('Pending', 'Reviewed', 'Rejected')
  
  // Response from seller
  seller_response text
  seller_responded_at timestamp
  
  deleted boolean [default: false, note: 'Soft delete - admin moderation']
  deleted_at timestamp
  created_at timestamp [default: `now()`]
  
  indexes {
    product_id
    user_id
    (rating)
  }
}

// ============================================
// 💰 SELLER MANAGEMENT (4 tables)
// ============================================

Table RevenueSettlement {
  id integer [pk, increment]
  seller_id integer [ref: > Users.id, not null]
  order_id integer [ref: - Orders.id, unique, not null]
  
  // Revenue calculation
  gross_revenue integer [note: 'Tổng doanh thu']
  platform_fee integer [note: 'Phí sàn']
  net_revenue integer [note: 'Doanh thu ròng']
  
  // Status
  status enum('Pending', 'Settled', 'Paid') [default: 'Pending']
  
  settled_at timestamp
  paid_at timestamp
  created_at timestamp [default: `now()`]
  
  indexes {
    seller_id
    status
    (created_at)
  }
}

Table Withdrawals {
  id integer [pk, increment]
  seller_id integer [ref: > Users.id, not null]
  
  amount integer [not null]
  bank_name varchar(100)
  account_number varchar(100)
  account_holder varchar(100)
  
  status enum('Pending', 'Processing', 'Approved', 'Rejected') [default: 'Pending']
  
  admin_note text
  processed_by integer [ref: > Users.id]
  
  created_at timestamp [default: `now()`]
  processed_at timestamp
  
  indexes {
    seller_id
    status
  }
}

Table SellerShopVisits {
  id integer [pk, increment]
  seller_id integer [ref: > Users.id, not null]
  visit_date date [not null]
  visitor_key varchar(64) [note: 'Hash của user_id hoặc IP']
  created_at timestamp [default: `now()`]
  
  indexes {
    (seller_id, visit_date, visitor_key) [unique]
  }
}

Table SellerShopFollows {
  id integer [pk, increment]
  seller_id integer [ref: > Users.id, not null]
  follower_id integer [ref: > Users.id, not null]
  created_at timestamp [default: `now()`]
  
  indexes {
    (seller_id, follower_id) [unique]
    follower_id
  }
}

// ============================================
// 💬 COMMUNICATION (2 tables)
// ============================================

Table Conversations {
  id integer [pk, increment]
  user1_id integer [ref: > Users.id, not null]
  user2_id integer [ref: > Users.id, not null]
  last_message text
  last_message_at timestamp
  created_at timestamp [default: `now()`]
  
  indexes {
    (user1_id, user2_id) [unique]
  }
  
  Note: 'user1_id should always be < user2_id'
}

Table Messages {
  id integer [pk, increment]
  conversation_id integer [ref: > Conversations.id, not null]
  sender_id integer [ref: > Users.id, not null]
  
  content text [not null]
  message_type enum('text', 'image', 'audio', 'file') [default: 'text']
  media_url varchar
  
  is_read boolean [default: false]
  read_at timestamp
  
  created_at timestamp [default: `now()`]
  
  indexes {
    (conversation_id, created_at)
    sender_id
  }
}

// ============================================
// ⚙️ CONFIGURATION (1 table)
// ============================================

Table PlatformConfig {
  id integer [pk, increment]
  config_key varchar(100) [unique, not null]
  config_value text
  description varchar(500)
  data_type enum('string', 'number', 'boolean', 'json') [default: 'string']
  created_at timestamp [default: `now()`]
  updated_at timestamp
  
  Note: 'Platform settings like platform_fee_percent, shipping_fee_default, etc'
}

// ============================================
// 📊 SUMMARY
// ============================================
// Total: 29 Tables
// - User Management: 5 tables
// - Product Management: 4 tables (removed TryonModels)
// - Shopping: 1 table
// - Orders: 3 tables
// - Payments: 4 tables
// - Shipping: 3 tables
// - Reviews: 1 table
// - Seller Management: 4 tables
// - Communication: 2 tables
// - Configuration: 1 table
